# vms-tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: ConsoleTool.cmake
debian/: changelog  control  copyright  files  rules  watch
debian/source/: options
include/: options.h
include/sha_from_dir/: options.h  process.h
include/sha_from_tar/: options.h  process.h
scripts/: build-deb-source.sh
tools/: CMakeLists.txt
tools/sha_from_dir/: CMakeLists.txt  main.cpp  options.cpp  process.cpp
tools/sha_from_tar/: CMakeLists.txt  main.cpp  options.cpp  process.cpp
